manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: is-even
spec:
  replicas: 1
  selector:
    matchLabels:
      app: is-even
  template:
    metadata:
      labels:
        app: is-even
    spec:
      containers:
      - name: is-even
        image: ghcr.io/owl-corp/is_even:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 120Mi
          limits:
            cpu: 150m
            memory: 150Mi
        securityContext:
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
