manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: is-even
spec:
  selector:
    app: is-even
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
